add new app CARDS

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <a target="_blank" class="link" href="./Weather/index.html">Weather App</a>
         </div>
         <div class="works">
-          <a target="_blank" class="link" href="./Header/index.html">Header</a>
+          <a target="_blank" class="link" href="./CARDS/index.html">Header</a>
         </div>
         <!-- <div class="works">
           <a target="_blank" class="link" href="./p-2/energy-storage.html">Storege</a>
